# scaffold

./: .gitignore  CMakeLists.txt  Makefile  README.md
bench/: CMakeLists.txt
learning/: CMakeLists.txt
learning/atomic/: CMakeLists.txt  introduction.cpp  main.cpp  mtpool.hpp
learning/co_http/: CMakeLists.txt  server.cpp
leptlog/: CMakeLists.txt
leptlog/include/: leptlog.h
tests/: CMakeLists.txt
tests/atm/: CMakeLists.txt  atm.cpp
tests/atm/include/: atm.h  bank_machine.h  dispatcher.h  interface_machine.h  message.h  withdraw_msg.h
tests/callback/: CMakeLists.txt  callback.cpp  callback.h
tests/log/: CMakeLists.txt  log_advance.cpp  log_basic.cpp
tests/memory_order/: CMakeLists.txt  introduction.cpp
tests/vanilla/server/: CMakeLists.txt  client.cpp  server.cpp  util.cpp
